src/compiler/z42.Tests/Fixtures/errors/generic_class_violation/source.z42
namespace Demo;

void F<T>(T x) where T: class { }

void Main() {
    F(42);
}
